core_directory/tests/fixtures/invalid_no_sig/valid_1.core
CAPI=2:
name: :library:core:1.0.0
description: "A core file without vendor."
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "0123456789abcdef0123456789abcdef01234567"